# libcw

./: Android.mk  Makefile.am  README  autogen.sh  configure.ac  tester.cpp
app/: local.properties
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/SanAngeles/: DemoActivity.java
include/: EGLUtils.h  window.h  window_input.h
src/: EGLUtils.cpp  Makefile.am  WindowSurface.cpp  WindowSurface.h  app-android.c  ashmem-dev.c  buffer.c  drawtex.c  gralloc_tex.c  hardware_stub.c  input.c  ipc.c  ipc.h  log.c  utils.h  window.c  windowInternals.h
src/libancillary/: ancillary.h
tests/: Makefile.am
tests/angeles/: Makefile.am  app-linux.cpp  demo.c
